cabal-version: 1.12
name:           hexml-lens
version:        0.2.2
synopsis:       Lenses for the hexml package
description:    Lenses for the hexml package
category:       lens
homepage:       https://github.com/pepeiborra/hexml-lens#readme
author:         Jose Iborra
maintainer:     pepeiborra@gmail.com
copyright:      All Rights Reserved
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

library
  exposed-modules:
      Text.XML.Hexml.Lens
  other-modules:
      Paths_hexml_lens
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , bytestring
    , contravariant
    , foundation
    , hexml
    , lens
    , profunctors
    , text
  default-language: Haskell2010

test-suite courses
  type: exitcode-stdio-1.0
  main-is: courses.hs
  other-modules:
      Paths_hexml_lens
  hs-source-dirs:
      examples
  build-depends:
      base
    , bytestring
    , hexml
    , hexml-lens
    , hspec
    , lens
    , wreq
  default-language: Haskell2010

test-suite doctests
  type: exitcode-stdio-1.0
  main-is: Doctests.hs
  other-modules:
      Paths_hexml_lens
  hs-source-dirs:
      test
  build-depends:
      QuickCheck
    , base
    , doctest
    , hexml-lens
  default-language: Haskell2010
